# CubiCasa5k

./: .gitignore  README.md  create_lmdb.py  nextgen-train.py  nextgen_train.py  predict.ipynb  pyproject.toml  samples.ipynb
floortrans/: metrics.py  plotting.py
floortrans/loaders/: augmentations.py  house.py  svg_loader.py  svg_utils.py
floortrans/losses/: uncertainty_loss.py
floortrans/models/: hg_furukawa_original.py
