[project]
name = "cubicasa5k"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.pixi.dependencies]
dask = "*"
graphviz = "*"
h5py = "*"
jupyterlab = "*"
kiwisolver = "*"
lmdb = "*"
matplotlib = "*"
networkx = "*"
numpy = "*"
pandas = "*"
Pillow = "*"
scikit-image = "*"
scipy = "*"
shapely = "*"
svgpathtools = "*"
svgwrite = "*"
tensorboardX = "*"
pytorch = "*"
tqdm = "*"
opencv = "*"
python-lmdb = "*"
torchvision = "*"
lxml = "*"
imageio = "*"
numba = "*"
tensorboard = ">=2.17.0,<3"
pynvml = ">=11.5.3,<12"
rich = ">=13.7.1,<14"
typer = ">=0.12.3,<0.13"
lightning = ">=2.3.3,<3"
pydantic = ">=2.8.2,<3"
cloudpickle = ">=3.0.0,<4"
fastapi = ">=0.112.0,<0.113"


[tool.pixi.project]
channels = ["rapidsai", "conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.target.linux-64.dependencies]
mkl = "*"
python-blosc2 = ">=2.6.1,<3"

[tool.pixi.feature.dev]
target.osx-arm64 = { pypi-dependencies = { blosc2 = ">=2.6.1,<3" } }

[tool.pixi.feature.cuda]
system-requirements = { cuda = "11.0" }
platforms = ["linux-64"]
# pypi-dependencies = { "onnxscript" = "*" }

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"
hvplot = ">=0.10.0,<0.11"
jupyter_bokeh = ">=4.0.5,<4.1"
# dependencies = ["spconv-cu118>=2.3.6,<3"]


[tool.pixi.environments]
default = ["dev"]
cuda = { features = ["cuda", "dev"] }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
